[tool.poetry]
name = "leaguepybot"
version = "0.3.0"
description = "Computer Vision Bot for League of Legends"
authors = ["DorskFR <dorsk.dev@gmail.com>"]
packages = [{ include = "leaguepybot" }, { include = "leaguepybot/py.typed" }]

[tool.poetry.dependencies]
python = "^3.10"
sentry-sdk = "^1.9.5"
aiohttp = "^3.8.1"
psutil = "^5.9.1"
rich = "^12.5.1"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
mypy = "^0.971"
autoflake = "^1.4"
black = "^22.6.0"
pytest = "^7.1.2"
isort = "^5.10.1"
types-setuptools = "^64.0.1"
types-psutil = "^5.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line_length = 100

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "C",
  "R",
  "logging-fstring-interpolation",
  "fixme",
  "unsubscriptable-object",
  "no-name-in-module",
]
